# nonebot-plugin-akinator

./: .gitignore  .gitmodules  README.md  pyproject.toml
extra/: bg.html
nonebot_plugin_akinator/: __init__.py  __main__.py  config.py  const.py  debug.py  game.py  message.py  render.py
nonebot_plugin_akinator/cli/: patch_import.py
nonebot_plugin_akinator/cli/res/: bot.py  patch_pw_import.py
nonebot_plugin_akinator/res/templates/: answer.html.jinja  base.html.jinja  base_aki_lre.html.jinja  question.html.jinja
nonebot_plugin_template/: __init__.py
